<resources>
    <string name="app_name">Tubes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_image">Choose Image</string>
    <string name="pilih_gambar">Pilih gambar</string>
    <string name="tambah_judul">Tambah Judul</string>
    <string name="jenis">Jenis</string>
    <string name="episode">Episode</string>
    <string name="status">Status</string>
    <string name="review">Review</string>
    <string name="simpan">simpan</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="reach_me">Reach me</string>
    <string name="erase_all_data">Erase all data</string>

</resources>