<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.setting.SettingFragment">


    <TextView
        android:id="@+id/tv_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/setting"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_erase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erase_all_data"
            android:textColor="@color/background"
            android:backgroundTint="#F44336"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_reach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reach_me"
            android:textColor="@color/background"/>

    </LinearLayout>

</RelativeLayout>