<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.addedit.AddEditFragment"
    android:orientation="vertical"
    android:weightSum="11"
    android:paddingHorizontal="16dp"
    android:background="@color/background"
    android:paddingTop="16dp"
    android:paddingBottom="12dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pilih_gambar"
            android:backgroundTint="#4be19a"
            android:textColor="@color/background"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="hint"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_1"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/tambah_judul"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayoutDropdownStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            app:endIconTint="@color/green"
            android:layout_marginEnd="8dp">

            <AutoCompleteTextView
                android:id="@+id/dropdown_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/jenis"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_3"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/episode"
            android:textColorHint="@color/white"
            android:layout_marginStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInputLayoutDropdownStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColorHint="@color/white"
        app:endIconTint="@color/green">

        <AutoCompleteTextView
            android:id="@+id/dropdown_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/status"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numStars="5"
        android:layout_gravity="center_horizontal"
        android:paddingTop="12dp"
        android:theme="@style/CustomRatingBar"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_2"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/review"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/simpan"
        android:textColor="@color/background"/>

</LinearLayout>